kubernetes/portainer-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portainer
  # Using hostpath volumes requires privileged pod security
  # This is required for the portainer container to access the host filesystem for storing data in /var/mnt/portainer
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
