kubernetes/portainer-server/portainer-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: portainer
spec:
  ingressClassName: traefik
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainer.kubernetes.timo.be`) || Host(`portainer.timo.be`)
      kind: Rule
      services:
        - name: portainer
          port: 9443
          serversTransport: portainer-insecure-transport
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portaineredge
  namespace: portainer
spec:
  ingressClassName: traefik
  entryPoints:
    - portaineredge
  routes:
    - match: Host(`portaineredge.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: portainer
          port: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-tailscale
  namespace: portainer
  annotations:
    # Instead of exposing as a machine, expose it as a Tailscale Service
    tailscale.com/proxy-group: tailscale-services
spec:
  defaultBackend:
    service:
      name: portainer
      port:
        number: 9000
  ingressClassName: tailscale
  tls:
    - hosts:
        - portainer
